tests/api/reference/negative/06-missing-label.asm
emit.u64(label_addr("missing"))
